--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 
 	<title>Atakan Ermiş</title>
 
-	<link rel='icon' type='image/png' href='/favicon.png'>
-	<link rel='stylesheet' href='/global.css'>
-	<link rel='stylesheet' href='/build/bundle.css'>
+	<link rel='icon' type='image/png' href='/public/favicon.png'>
+	<link rel='stylesheet' href='/public/global.css'>
+	<link rel='stylesheet' href='/public/build/bundle.css'>
 	<link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
 
-	<script defer src='/build/bundle.js'></script>
+	<script defer src='/public/build/bundle.js'></script>
 </head>
 
 <body>
