--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
 	<meta charset='utf-8'>
+	<meta name="description" content="Personal Webpage of a Software Developer.">
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 	<meta name="google-site-verification" content="oapjxHLHMH__HZbrb80KDEVBAqpBbwy_SOSiXEdSQ3U" />
 
