--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
 	<meta charset='utf-8'>
 	<meta name="description" content="Personal Webpage of a Software Developer.">
+	<meta name="keywords"
+		content="atakan, ermiş, programming, programlama, yazılım, software, web, yazılımcı, programmer, developer, geliştirici, gelistirici, yazilim, yazilimci, ermis">
+	<meta name="author" content="Atakan Ermiş">
+
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 	<meta name="google-site-verification" content="oapjxHLHMH__HZbrb80KDEVBAqpBbwy_SOSiXEdSQ3U" />
 
