--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<link rel='icon' type='image/png' href='/public/favicon.png'>
 	<link rel='stylesheet' href='/public/global.css'>
 	<link rel='stylesheet' href='/public/build/bundle.css'>
-	<link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
+	<link href="/public/icomoon-atakanermis/style.css" rel="stylesheet">
 
 	<script defer src='/public/build/bundle.js'></script>
 </head>
