--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 	<link rel='icon' type='image/png' href='/favicon.png'>
 	<link rel='stylesheet' href='/global.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
-	<link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
+	<link href="/icomoon-atakanermis/style.css" rel="stylesheet">
 
 	<script defer src='/build/bundle.js'></script>
 </head>
